// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleUnitTemp renders ToggleUnitTemp renders  should render with falsy context value 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="toggle-unit-temp toggle-wrapper"
        data-testid="toggle-unit-temp"
        for="toggle-unit-temp"
        tabindex="0"
      >
        <div
          class="toggle enabled"
        >
          <input
            id="toggle-unit-temp"
            name="toggle"
            type="checkbox"
          />
          <div
            class="toggle-selector"
          >
            <div
              class="wrapper-icons"
            />
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        class="toggle-unit-temp toggle-wrapper"
        data-testid="toggle-unit-temp"
        for="toggle-unit-temp"
        tabindex="0"
      >
        <div
          class="toggle disabled"
        >
          <input
            id="toggle-unit-temp"
            name="toggle"
            type="checkbox"
          />
          <div
            class="toggle-selector"
          >
            <div
              class="wrapper-icons"
            />
          </div>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="toggle-unit-temp toggle-wrapper"
      data-testid="toggle-unit-temp"
      for="toggle-unit-temp"
      tabindex="0"
    >
      <div
        class="toggle disabled"
      >
        <input
          id="toggle-unit-temp"
          name="toggle"
          type="checkbox"
        />
        <div
          class="toggle-selector"
        >
          <div
            class="wrapper-icons"
          />
        </div>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ToggleUnitTemp renders should render match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="toggle-unit-temp toggle-wrapper"
        data-testid="toggle-unit-temp"
        for="toggle-unit-temp"
        tabindex="0"
      >
        <div
          class="toggle enabled"
        >
          <input
            id="toggle-unit-temp"
            name="toggle"
            type="checkbox"
          />
          <div
            class="toggle-selector"
          >
            <div
              class="wrapper-icons"
            />
          </div>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="toggle-unit-temp toggle-wrapper"
      data-testid="toggle-unit-temp"
      for="toggle-unit-temp"
      tabindex="0"
    >
      <div
        class="toggle enabled"
      >
        <input
          id="toggle-unit-temp"
          name="toggle"
          type="checkbox"
        />
        <div
          class="toggle-selector"
        >
          <div
            class="wrapper-icons"
          />
        </div>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
